--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- meta viewport behavior -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/> bad for a11y to disable scale -->
+    <!-- bad for a11y to disable scale, but bad not to have initial-scale lol -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!-- apple full-screen mode -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- apple style of status bar -->
@@ -152,13 +154,15 @@
           <a
             href="https://www.linkedin.com/in/miffy-chen/"
             target="_blank"
-            class="social-link linkedin"
+            class="social-link"
+            aria-label="LinkedIn"
             ><i class="social-icon fa-brands fa-linkedin"></i
           ></a>
           <a
             href="https://www.github.com/miffycs"
             target="_blank"
-            class="social-link github"
+            class="social-link"
+            aria-label="GitHub"
             ><i class="social-icon fa-brands fa-github"></i
           ></a>
           <!-- <a href="https://drive.google.com/file/d/11q2ZAeVJmTUDjcLeAlrMpr-JLKYO7EzQ/view" target="_blank"
@@ -166,13 +170,15 @@
           <a
             href="files/resume/ChenMiffy2023Sept-2mb.pdf"
             target="_blank"
-            class="social-link resume"
+            class="social-link"
+            aria-label="Resume"
             ><i class="social-icon fa-solid fa-file-arrow-down"></i
           ></a>
           <a
             href="mailto:mchen15@bu.edu"
             target="_blank"
-            class="social-link email"
+            class="social-link"
+            aria-label="Email"
             ><i class="social-icon fa-regular fa-envelope"></i
           ></a>
         </div>
