move prevent-select to body level

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     />
   </head>
 
-  <body>
+  <body class="prevent-select cursor-file">
     <div class="lightbulb">💡</div>
     <div id="blob"></div>
     <div id="blur"></div>
 
-    <div class="card glass prevent-select">
+    <div class="card glass">
       <div class="container">
         <div class="avatar-wrapper">
           <img
