--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- meta viewport behavior -->
     <!-- bad for a11y to disable scale, but bad not to have initial-scale lol -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- apple full-screen mode -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- apple style of status bar -->
@@ -180,6 +180,13 @@
             class="social-link"
             aria-label="Email"
             ><i class="social-icon fa-regular fa-envelope"></i
+          ></a>
+          <a
+            href="https://calendly.com/miffychen/30"
+            target="_blank"
+            class="social-link"
+            aria-label="Calendly"
+            ><i class="social-icon fa-regular fa-clock"></i
           ></a>
         </div>
         <div class="last-resume floating">(Last updated: 2023/10/01)</div>
