add new circular invert cursor

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
 
-  <body class="prevent-select cursor-file">
+  <body class="prevent-select">
     <div class="lightbulb">💡</div>
     <div id="blob"></div>
     <div id="blur"></div>
+    <div id="cursor-circular-invert"></div>
 
     <div class="card glass">
       <div class="container">
@@ -193,6 +195,7 @@
       </div>
     </div>
 
+    <script src="js/cursor.js"></script>
     <script src="js/blurb.js"></script>
     <script src="js/typewriter.js"></script>
     <script src="js/magic.js"></script>
