--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="social">
           <a
-            href="https://www.linkedin.com/in/miffy-chen/"
+            href="https://www.linkedin.com/in/miffychen/"
             target="_blank"
             class="social-link"
             aria-label="LinkedIn"
