--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             ><i class="social-icon fa-solid fa-file-arrow-down"></i
           ></a>
           <a
-            href="mailto:mchen15@bu.edu"
+            href="mailto:miffy@miffy.io"
             target="_blank"
             class="social-link"
             aria-label="Email"
