disable fancy color blurb that follows cursor bc need to fix firefox and safari versions...

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </head>
 
   <body class="prevent-select">
-    <div class="lightbulb">💡</div>
+    <!-- <div class="lightbulb">💡</div> -->
     <div id="blob"></div>
     <div id="blur"></div>
     <div id="cursor-circular-invert"></div>
@@ -196,9 +196,9 @@
     </div>
 
     <script src="js/cursor.js"></script>
-    <script src="js/blurb.js"></script>
+    <!-- <script src="js/blurb.js"></script> -->
     <script src="js/typewriter.js"></script>
     <script src="js/magic.js"></script>
-    <script src="js/lumos.js"></script>
+    <!-- <script src="js/lumos.js"></script> -->
   </body>
 </html>
