Move resume_last_added tooltip into its own file

--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
             ><i class="social-icon fa-regular fa-clock"></i
           ></a>
         </div>
-        <div class="last-resume floating">(Last updated: 2023/10/01)</div>
+        <div class="resume-last-updated floating">
+          (Last updated: 2023/10/01)
+        </div>
       </div>
     </div>
 
@@ -200,5 +202,6 @@
     <script src="js/typewriter.js"></script>
     <script src="js/magic.js"></script>
     <!-- <script src="js/lumos.js"></script> -->
+    <script src="js/resume_last_updated.js"></script>
   </body>
 </html>
